[gd_scene load_steps=8 format=3 uid="uid://dw83s7iognod8"]

[ext_resource type="Script" path="res://Player.gd" id="1_aorir"]
[ext_resource type="Texture2D" uid="uid://bf21fgyokvo6b" path="res://Assets/ShootandIdle.png" id="2_x66dq"]
[ext_resource type="AudioStream" uid="uid://cft7m3leuc2uj" path="res://Assets/sounds/foot_steps.mp3" id="3_gama5"]

[sub_resource type="Animation" id="Animation_uj6be"]
resource_name = "run"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_a40dm"]
resource_name = "shoot"
length = 0.35
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q1uhv"]
_data = {
"run": SubResource("Animation_uj6be"),
"shoot": SubResource("Animation_a40dm")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qhxg8"]
size = Vector2(31, 21)

[node name="Player" type="CharacterBody2D"]
scale = Vector2(2, 2)
collision_mask = 2
script = ExtResource("1_aorir")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_x66dq")
hframes = 4
vframes = 2

[node name="PlayerAnimation" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_q1uhv")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 5.5)
shape = SubResource("RectangleShape2D_qhxg8")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(0, -5)

[node name="ShootTimer" type="Timer" parent="."]

[node name="FootSteps" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_gama5")
pitch_scale = 1.33
attenuation = 3.13833
bus = &"SFX"

[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
